--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<spring-boot-admin.version>2.1.6</spring-boot-admin.version>
 		<!--
 		<skipTests>true</skipTests>
-		 -->
+		-->
 	</properties>
 
 	<dependencies>
@@ -76,6 +76,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
