--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+
 		<dependency>
-			<groupId>io.reactivex</groupId>
+			<groupId>io.reactivex.rxjava2</groupId>
 			<artifactId>rxjava</artifactId>
-			<version>1.3.8</version>
+			<version>2.2.19</version>
 		</dependency>
 
 		<dependency>
