--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,20 @@ spring:
   application:
     name: myapp_demo
 
+  datasource:
+    url: jdbc:h2:mem:tipocambiodb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  # Enabling H2 Console and URL
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
 server:
   port: ${vcap.application.port:${PORT}}
 
@@ -29,6 +43,21 @@ spring:
   profiles: dev
   application:
     name: myapp_demo
+
+  datasource:
+    url: jdbc:h2:mem:tipocambiodb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  # Enabling H2 Console and URL
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
 
 server:
   port: ${vcap.application.port:8088}
